# HIP-DFPT

./: README.md
cpscf_polar_reduce_memory/: cpscf_solver_polar_reduce_memory.f90  integrate_first_order_H_polar_reduce_memory.f90  integrate_first_order_rho_polar_reduce_memory.f90
gpu/: CMakeLists.txt  gpuAll.cu  gpuAll.h  gpuDensity.cu  gpuDensity.cu.prehip  gpuDensity.h  gpuDensity.h.prehip  gpuError.cu  gpuError.cu.prehip  gpuError.h  gpuError.h.prehip  gpuFirstorderH.cu  gpuFirstorderH.h  gpuForces.cu  gpuForces.cu.prehip  gpuForces.h  gpuForces.h.prehip  gpuH.cu  gpuHAll.cu  gpuHAll.h  gpuHUtils.cu  gpuHUtils.h  gpuIntegrateHam.cu  gpuIntegrateHam.cu.prehip  gpuIntegrateHam.h  gpuIntegrateHam.h.prehip  gpuInterface.cu  gpuInterface.cu.prehip  gpuInterface.h  gpuInterface.h.prehip  gpuMR.cu  gpuMR.cu.prehip  gpuMR.f90  gpuMR.h  gpuMR.h.prehip  gpuMacro.h.prehip  gpuNotes.md  gpuRHO.cu  gpuSum.cu  gpuSum.h  (+17 more)
scripts/: sbatch_node128_ntask512_gpu512_3.sh  sbatch_node128_ntask512_gpu512_6.sh  sbatch_node2048_ntask8192_gpu8192_20.sh  sbatch_node256_ntask1024_gpu1024_1.5.sh  sbatch_node256_ntask1024_gpu1024_6sh  sbatch_node512_ntask2048_gpu2048_6.sh
scripts/ADAE/A1/: sbatch_node512_ntask512_gpu2048_3 - MB_MSP.sh
scripts/ADAE/A2/: sbatch_node64_ntask256_gpu256_3 - pre.sh
scripts/ADAE/A3/: sbatch_node128_ntask512_gpu512_11.sh
scripts/ADAE/A4/: sbatch_node2048_ntask8192_gpu8192_11.sh  sbatch_node32_ntask128_gpu128_1.5.sh  sbatch_node4000_ntask16000_gpu16000_20.sh  sbatch_node64_ntask256_gpu256_1.5.sh
